# mojo-playground

./: README.md  main.mojo  main.py  pyproject.toml
algorithms/: gauss_seidel.mojo  naive_bayes.mojo
