[tool.poetry]
name = "mojo-playground"
version = "0.1.0"
description = ""
authors = ["jloveric <john.loverich@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mojo_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
